Se modifico el nombre de la imagen para quen no tenga espacios

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <section class="card">
         <div class="card_image">
-            <img src="imagen/Blog Image.png" alt="blog image">
+            <img src="imagen/Blog_Image.png" alt="blog image">
         </div>
         <div class="card_content">
             <a href="#" class="card_content-category">Learning</a>
